fix hero unit z-index

--- a/front/css/public.css
+++ b/front/css/public.css
@@ -10,7 +10,7 @@
     position: fixed;
     bottom: 0;
     left: 0;
-    z-index: 11;
+    z-index: 1000;
 }
 
 .ssm-admin-menu .menu {
